fixed z-index issue

--- a/src/components/Navbar/styles.css
+++ b/src/components/Navbar/styles.css
@@ -5,6 +5,7 @@
   left: 0;
   right: 0;
   margin: 0;
+  z-index: 2000;
 }
 
 #navbar ul {
